--- a/grocerylist.net/Views/List/Item.cshtml
+++ b/grocerylist.net/Views/List/Item.cshtml
@@ -1,4 +1,4 @@
-﻿@model GroceryItem
+﻿@model grocerylist.net.Models.Grocery.Item
 @{
     ViewData["Title"] = "New Grocery Item";
 }
@@ -17,15 +17,15 @@
     </div>
     <div class="field">
         <label for="item[requestedAt]">Request Date</label>
-        <input type="text" id="item[requestedAt]" name="item[requestedAt]" value="@Model.RequestedAt"/>
+        <input type="text" id="item[requestedAt]" name="item[requestedAt]" value="@Model.RequestedTime"/>
     </div>
     <div class="field">
         <label for="item[createdAt]">Created Date</label>
-        <input type="text" id="item[createdAt]" name="item[createdAt]" value="@Model.CreatedAt"/>
+        <input type="text" id="item[createdAt]" name="item[createdAt]" value="@Model.CreatedTime"/>
     </div>
     <div class="field">
         <label for="item[requestedBy]">Who Requested</label>
-        <input type="text" id="item[requestedBy]" name="item[requestedBy]" value="@Model.RequestedBy"/>
+        <input type="text" id="item[requestedBy]" name="item[requestedBy]" value="@Model.CreatedBy"/>
     </div>
     <div class="field button">
         <input type="submit" id="enterItem" name="enterItem" value="Submit"/>
