--- a/GroceryList.Mvc/wwwroot/css/site.css
+++ b/GroceryList.Mvc/wwwroot/css/site.css
@@ -62,6 +62,26 @@ body {
   /* Margin bottom by footer height */
   margin-bottom: 60px;
 }
+
+/* Grocery List */
+.grocery-list {
+  max-width: 99%;
+}
+.grocery-item {
+  width: 100%;
+  text-align: center;
+}
+.header {
+  font-weight: bold;
+  font-size: .5em;
+}
+.grocery-field {
+  float:left;
+  clear:left;
+  margin: 2 4 0 1;
+}
+
+
 .footer {
   position: absolute;
   bottom: 0;
