setting up home/user/relations

--- a/GroceryList/Views/Home/Index.cshtml
+++ b/GroceryList/Views/Home/Index.cshtml
@@ -3,6 +3,13 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Welcome!</h1>
+    <p>You don't seem to have a home, please enter the ID now.</p>
+
+<form method="post" action="">
+   <div class="form-group">
+      <label for="textHomeId">Home ID</label>
+      <input type="text" id="textHomeId" name="textHomeId" />
+   </div>
+</form>
 </div>
