--- a/GroceryList/Pages/Grocery/Index.cshtml
+++ b/GroceryList/Pages/Grocery/Index.cshtml
@@ -1,8 +1,8 @@
 ﻿@model List<GroceryList.Models.GroceryItem>
 @{
 	@ViewData["Title"]= "Current";
+	string homeId;
 }
-
 <table>
 	<thead>
 		<tr>
@@ -14,6 +14,7 @@
 		</tr>
 	</thead>
 	<tbody>
+@* ADD *@
 @foreach (var item in Model) {
 		<tr>
 			<td>@item.Name</td>
@@ -21,6 +22,7 @@
 			<td>@item.Price</td>
 			<td>@item.CreatedTime.Format(includeDate:true)</td>
 			<td>@(item.InCartTime != null ? "YES" : "")</td>
+			@* EDIT *@
 		</tr>
 }
 	</tbody>
