--- a/GroceryList/Views/Grocery/Add.cshtml
+++ b/GroceryList/Views/Grocery/Add.cshtml
@@ -27,6 +27,6 @@
 	<div class="form-group">
 		<input type="submit" id="submit" name="submit" value="Add" class="btn btn-primary" />
 		<input type="button" value="Cancel" class="btn btn-secondary"
-				 onclick="location.href='@Url.Action("Index","Grocery", new { homeId = ViewData["HomeId"] })';" />
+				 onclick="location.href='@Url.GetGroceryUrl(ViewContext)';" />
 	</div>
 </form>
