--- a/GroceryList/Views/Grocery/Index.cshtml
+++ b/GroceryList/Views/Grocery/Index.cshtml
@@ -1,6 +1,7 @@
 ﻿@model List<GroceryList.Models.GroceryItem>
 @{
 	ViewData["Title"] = "Current Grocery List";
+	//<a asp-route-homeId="@ViewData["HomeId"]" asp-controller="Grocery" asp-action="Add">
 }
 <div class="text-center">
 	<h1>@ViewData["Title"]</h1>
@@ -22,7 +23,7 @@
 
 @if (Model == null)
 {
-	<h3>There's nothing in your list currently, click <a asp-route-homeId="@ViewData["HomeId"]" asp-controller="Grocery" asp-action="Add">here</a> to start one.</h3>
+	<h3>There's nothing in your list currently, click <a href="@Url.GetGroceryUrl(ViewContext, "Add")">here</a> to start one.</h3>
 }
 else
 {
@@ -56,10 +57,12 @@ else
 				</tr>
 			}
 		</tbody>
-
-		<div class="form-group">
-			<input type="button" value="Checkout" class="btn btn-primary"
-					 onclick="location.href='@Url.GetGroceryUrl(ViewContext, "Checkout")';" />
-		</div>
 	</table>
+
+	<div class="form-group">
+		<input type="button" value="Add Item" class="btn btn-primary"
+				 onclick="location.href='@Url.GetGroceryUrl(ViewContext, "Add")';" />
+		<input type="button" value="Checkout" class="btn btn-primary"
+				 onclick="location.href='@Url.GetGroceryUrl(ViewContext, "Checkout")';" />
+	</div>
 }
