--- a/GroceryList/Views/Grocery/Edit.cshtml
+++ b/GroceryList/Views/Grocery/Edit.cshtml
@@ -4,6 +4,12 @@
 }
 <div class="text-center">
 	<h1>@ViewData["Title"]</h1>
+
+	@if (TempData["ErrorMessage"] != null)
+	{
+	<h3>@TempData["ErrorMessage"]</h3>
+	}
+	@Html.ValidationSummary();
 </div>
 
 <form method="post">
@@ -38,13 +44,11 @@
 		<input asp-for="CreatedTime" class="form-control" readonly>
 		<span asp-validation-for="CreatedTime" class="text-danger"></span>
 	</div>
-	<!--
-	<div class="form-group">
+	<div class="form-groug" style="display:none;">
 		<label asp-for="CreatedUser" class="control-label">Created by</label>
 		<input asp-for="CreatedUser" class="form-control" readonly>
 		<span asp-validation-for="CreatedUser" class="text-danger"></span>
 	</div>
-	-->
 	<div class="form-group">
 		<label asp-for="InCartTime" class="control-label">In Cart Time</label>
 		<input asp-for="InCartTime" class="form-control" readonly>
