--- a/GroceryList/Views/Shared/_Layout.cshtml
+++ b/GroceryList/Views/Shared/_Layout.cshtml
@@ -18,7 +18,7 @@
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
+                        <li class="nav-item">@* Once user in a home, this should probably direct to that base *@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
