allow setup new home

--- a/GroceryList/Views/Home/Index.cshtml
+++ b/GroceryList/Views/Home/Index.cshtml
@@ -6,5 +6,5 @@
 
 	<h1 class="display-4">Welcome</h1>
 	<p>This is a <b>very</b> simple grocery list application.</p>
-	<p>If you have been added to a list, please use that link to access your site.</p>
+	<p>If you have been added to a home, please use the shared link to access your site.</p>
 </div>
