--- a/GroceryList/Views/Shared/_Layout.cshtml
+++ b/GroceryList/Views/Shared/_Layout.cshtml
@@ -17,9 +17,10 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
+                    @* Once user in a home, all URL's should include that base *@
                     <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">@* Once user in a home, this should probably direct to that base *@
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" href="@Url.GetHomeUrl(ViewContext)">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
