--- a/GroceryList/Views/Home/Error.cshtml
+++ b/GroceryList/Views/Home/Error.cshtml
@@ -1,4 +1,4 @@
-@model ErrorViewModel
+@model GroceryList.Models.ErrorViewModel
 @{
     ViewData["Title"] = "Error";
 }
@@ -15,7 +15,7 @@
 
 <h3>Development Mode</h3>
 <p>
-    Swapping to <strong>Development</strong> environment will display more detailed information about the error that occurred.
+    Swapping to the <strong>Development</strong> environment displays detailed information about the error that occurred.
 </p>
 <p>
     <strong>The Development environment shouldn't be enabled for deployed applications.</strong>
