--- a/GroceryList/Views/Shared/_Layout.cshtml
+++ b/GroceryList/Views/Shared/_Layout.cshtml
@@ -20,7 +20,7 @@
                     @* Once user in a home, all URL's should include that base *@
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" href="@Url.GetHomeUrl(ViewContext)">Home</a>
+                            <a class="nav-link text-dark" href="@GroceryList.UrlExtensions.GetHomeUrl(Url, ViewContext)">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
