--- a/GroceryList/Views/Shared/_Layout.cshtml
+++ b/GroceryList/Views/Shared/_Layout.cshtml
@@ -1,9 +1,15 @@
-﻿<!DOCTYPE html>
+﻿@using GroceryList;
+@{
+    // asp-area="" asp-controller="Home" asp-action="Index"
+    var homeUrl = Url.GetHomeUrl(ViewContext);
+    // get Home's title (?? store in cookies ??)
+    var homeTitle = Context.GetHomeTitle();
+}<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Grocery List</title>
+    <title>@ViewData["Title"] - @homeTitle</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
@@ -11,7 +17,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Groceries</a>
+                <a class="navbar-brand" href="@homeUrl">Groceries</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -20,7 +26,7 @@
                     @* Once user in a home, all URL's should include that base *@
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" href="@GroceryList.UrlExtensions.GetHomeUrl(Url, ViewContext)">Home</a>
+                            <a class="nav-link text-dark" href="@homeUrl">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
@@ -38,7 +44,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2022 - Grocery List - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2022 - @homeTitle - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
