--- a/GroceryList/Views/Grocery/Add.cshtml
+++ b/GroceryList/Views/Grocery/Add.cshtml
@@ -4,6 +4,12 @@
 }
 <div class="text-center">
 	<h1>@ViewData["Title"]</h1>
+
+	@if (TempData["ErrorMessage"] != null)
+	{
+	<h3>@TempData["ErrorMessage"]</h3>
+	}
+	@Html.ValidationSummary()
 </div>
 
 <form method="post">
