--- a/GroceryList/Views/Grocery/Edit.cshtml
+++ b/GroceryList/Views/Grocery/Edit.cshtml
@@ -9,7 +9,7 @@
 	{
 	<h3>@TempData["ErrorMessage"]</h3>
 	}
-	@Html.ValidationSummary();
+	@Html.ValidationSummary()
 </div>
 
 <form method="post">
