--- a/GroceryList/Views/Home/Create.cshtml
+++ b/GroceryList/Views/Home/Create.cshtml
@@ -11,7 +11,7 @@
 	{
 	<h3>@TempData["ErrorMessage"]</h3>
 	}
-	@Html.ValidationSummary();
+	@Html.ValidationSummary()
 </div>
 
 <form method="post">
