--- a/GroceryList/Views/Grocery/Edit.cshtml
+++ b/GroceryList/Views/Grocery/Edit.cshtml
@@ -1,73 +1,6 @@
-﻿@model GroceryList.Models.GroceryItem
+﻿@model GroceryList.Models.Forms.GroceryItemForm
 @{
-	ViewData["Title"] = "Edit Grocery List Item";
+	ViewData["Title"] = "Edit Item";
+	ViewData["SubmitValue"] = "Edit";
 }
-<div class="text-center">
-	<h1>@ViewData["Title"]</h1>
-
-	@if (TempData["ErrorMessage"] != null)
-	{
-	<h3>@TempData["ErrorMessage"]</h3>
-	}
-	@Html.ValidationSummary()
-</div>
-
-<form method="post">
-	<input asp-for="Id" type="hidden">
-	<input asp-for="HomeId" type="hidden">
-
-	<div asp-validation-summary="ModelOnly" class="text-danger"></div>
-
-	<div class="form-group">
-		<label asp-for="Name" class="control-label"></label>
-		<input asp-for="Name" class="form-control" autofocus>
-		<span asp-validation-for="Name" class="text-danger"></span>
-	</div>
-	<div class="form-group">
-		<label asp-for="Brand" class="control-label"></label>
-		<input asp-for="Brand" class="form-control">
-		<span asp-validation-for="Brand" class="text-danger"></span>
-	</div>
-	<div class="form-group">
-		<label asp-for="Price" class="control-label"></label>
-		<input asp-for="Price" class="form-control">
-		<span asp-validation-for="Price" class="text-danger"></span>
-	</div>
-	<div class="form-group">
-		<label asp-for="Notes" class="control-label"></label>
-		<textarea asp-for="Notes" class="form-control"></textarea>
-		<span asp-validation-for="Notes" class="text-danger"></span>
-	</div>
-
-	<div class="form-group">
-		<label asp-for="CreatedTime" class="control-label">Created Time</label>
-		<input asp-for="CreatedTime" class="form-control" readonly>
-		<span asp-validation-for="CreatedTime" class="text-danger"></span>
-	</div>
-	<div class="form-groug" style="display:none;">
-		<label asp-for="CreatedUser" class="control-label">Created by</label>
-		<input asp-for="CreatedUser" class="form-control" readonly>
-		<span asp-validation-for="CreatedUser" class="text-danger"></span>
-	</div>
-	<div class="form-group">
-		<label asp-for="InCartTime" class="control-label">In Cart Time</label>
-		<input asp-for="InCartTime" class="form-control" readonly>
-		<span asp-validation-for="InCartTime" class="text-danger"></span>
-	</div>
-	<!--
-	<div class="form-group">
-		<label asp-for="InCartUser" class="control-label">Sent to Cart by</label>
-		<input asp-for="InCartUser" class="form-control" readonly>
-		<span asp-validation-for="InCartUser" class="text-danger"></span>
-	</div>
-	-->
-	@*
-		PurchasedTime
-		PurchasedUser
-	*@
-	<div class="form-group">
-		<input type="submit" id="submit" name="submit" value="Add" class="btn btn-primary" />
-		<input type="button" value="Cancel" class="btn btn-secondary"
-				 onclick="location.href='@Url.GetGroceryUrl(ViewContext)';" />
-	</div>
-</form>
+@await Html.PartialAsync("~/Views/Grocery/_ItemForm.cshtml", Model)
