privacy wording fix & add store to checkout

--- a/GroceryList/Views/Home/Privacy.cshtml
+++ b/GroceryList/Views/Home/Privacy.cshtml
@@ -3,4 +3,4 @@
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>We keep very little of your data beyond web server logs.</p>
+<p>We keep very little of your data beyond standard web server logs.</p>
