--- a/GroceryList/Views/Grocery/Checkout.cshtml
+++ b/GroceryList/Views/Grocery/Checkout.cshtml
@@ -46,6 +46,10 @@
 	<input asp-for="HomeId" type="hidden">
 	<input asp-for="JoinedIds" type="hidden">
 	<div class="form-group">
+		<label asp-for="StoreName">Store Name</label>
+		<input asp-for="StoreName" />
+	</div>
+	<div class="form-group">
 		<input type="submit" value="Checkout" class="btn btn-primary" />
 		<input type="button" value="Cancel" class="btn btn-secondary"
 				 onclick="location.href='@Url.GetGroceryUrl(ViewContext)';" />
