--- a/GroceryList/Views/Grocery/_ItemForm.cshtml
+++ b/GroceryList/Views/Grocery/_ItemForm.cshtml
@@ -31,7 +31,7 @@
 	</div>
 	<div class="form-group">
 		<label asp-for="Price" class="control-label"></label>
-		<input asp-for="Price" class="form-control" inputmode="numeric" pattern="[0-9]*">
+		<input asp-for="Price" class="form-control" inputmode="numeric" pattern="[0-9]*([\.,][0-9]+)?">
 		<span asp-validation-for="Price" class="text-danger"></span>
 	</div>
 	<div class="form-group">
