--- a/GroceryList/Views/Grocery/Checkout.cshtml
+++ b/GroceryList/Views/Grocery/Checkout.cshtml
@@ -2,7 +2,7 @@
 @{
 	ViewData["Title"] = "Checkout";
 	double total = 0.00;
-	var itemList = Model.Items ?? new List<GroceryItem>();
+	var itemList = Model.Items ?? new List<GroceryList.Lib.Models.GroceryItem>();
 }
 <div class="text-center">
 	<h1>@ViewData["Title"]</h1>
