--- a/GroceryList/Views/Grocery/Index.cshtml
+++ b/GroceryList/Views/Grocery/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<GroceryList.Models.GroceryItem>
+﻿@model IEnumerable<GroceryList.Lib.Models.GroceryItem>
 @{
 	 ViewData["Title"] = "Current Grocery List";
 	 //<a asp-route-homeId="@ViewData["HomeId"]" asp-controller="Grocery" asp-action="Add">
